--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section class="sec-4">
         <p>
             Copyright &copy; 2020 All Right Reserved by
-            <a href="https://github.com/shailja025/FS_Assignment11.git">Assignment - FullStack</a>
+            <a href="https://shailja025.github.io/FS_Assignment11/index.html">Assignment - FullStack</a>
         </p>
     </section>
 </footer>
