--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
         </section>
 
         <section class="link3">
-            <h2>Contact</h2>K
+            <h2>Contact</h2>
             <ul>
                 <li><i class="fa fa-home"></i><span>W Block Keshav Nagar, Kanpur</span></li>
                 <li><i class="fa fa-envelope"></i><span>shailjatripathi025@gmail.com</span></li>
                 <li><i class="fa fa-phone-square"></i><span>Mobile: 8853858585</span></li>
                 <li><i class="fa fa-facebook-official"></i><a
                         href="https://www.facebook.com/shailja.tripathi.777/" target="_blank">Shailja Tripathi</a></i><span></span></li>
-                <li><i class="fa fa-home"></i><span>SCO-75 Chandigarh, India</span></li>
             </ul>
         </section>
     </section>
